删除冗余的目录
